# info-process

./: .ci.yml  .gitignore  LICENSE  README.md  handlers.py  info-merge.py  info-process.py  parser.py  pyproject.toml
info_process/: __main__.py  archive_diff.py  compare.py  extract.py  handlers.py  info_process.py  merge.py  pack.py  parser.py  report.py  transform.py  waive.py
tests/test_merge/: test_merge.py
