[project]
name="info-process"
requires-python = ">=3.9"
version="0.0.0"
description="info-process"
authors= [
  {name = "Antmicro"}
]
dependencies = [
  "tabulate>=0.9",
  "colorama>=0.4.6"
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.1"
]

[project.scripts]
info-process = "info_process.info_process:main"
